# hp-fan-control

./: HpFanControl.sln  LICENSE  README.md  index.html  package-lock.json  package.json
driver/: install.sh  uninstall.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  fan_controller.rs  hardware.rs  helper.rs  lib.rs  main.rs  models.rs
src/HpFanControl.Core/: HpFanControl.Core.csproj
src/HpFanControl.Core/Hardware/Implementations/: CpuSensor.cs  FanDriver.cs  GpuSensor.cs  IntegratedGpuProvider.cs  NvidiaGpuProvider.cs
src/HpFanControl.Core/Hardware/Interfaces/: ICpuSensor.cs  IFanDriver.cs  IGpuProvider.cs  IGpuSensor.cs
src/HpFanControl.Core/Helpers/: FanCurveCalculator.cs  SysFs.cs
src/HpFanControl.Core/Models/: FanConfig.cs  FanCurvePoint.cs  FanMode.cs  SystemStats.cs
src/HpFanControl.Core/Services/Implementations/: ConfigService.cs  (+2 more)
src/HpFanControl.UI/: App.razor  HpFanControl.UI.csproj  Program.cs  _Imports.razor
src/HpFanControl.UI/Components/: CurveEditor.razor  CurveEditor.razor.cs  FanCurvePanel.razor  FanCurvePanel.razor.cs  ModeSelector.razor  ModeSelector.razor.cs  StatsDisplay.razor  StatsDisplay.razor.cs  StatusHeader.razor  StatusHeader.razor.cs
src/HpFanControl.UI/Models/: ModeUiDefinition.cs  SensorModel.cs
src/HpFanControl.UI/wwwroot/: app.css  index.html
src/components/: BackgroundEffects.tsx  CurveEditor.tsx  FanCurvePanel.tsx  FanList.tsx  ModeSelector.tsx  SettingsModal.tsx  StatsDisplay.tsx  StatusHeader.tsx  StatusIndicator.tsx  ToggleSwitch.tsx
(+3 files in other folders)
