[package]
name = "hp-fan-control"
version = "0.2.0"
description = "HP Victus Fan Control"
authors = ["Kursat Abayli"]
edition = "2021"

default-run = "hp-fan-control"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hp_fan_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nvml-wrapper = "0.11.0"

[[bin]]
name = "hp-fan-helper"
path = "src/helper.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"
